# jax-vessels

./: .gitignore  BENCHMARK.md  Dockerfile  Dockerfile.openfoam13  README.md  Snakefile  config.yaml  issue3_report.md  pyproject.toml
analysis_runs/case_simple_box_0/: README.md
benchmarks/: run_benchmark.py
docs/: README_index.md  hull_requirements.md  instability_investigation.md  issue_stall_0.42s.md  openfoam_setup.md  openfoam_style_guide.md  review.md  verification_matrix.md  verification_report.md  workflow_proposal.d2
docs/release_notes/: v0.3.6.md
docs/templates/: floating_hull.md  index.md  inverse_barometer.md  kcs_hull.md  still_water.md  wave_tank.md
examples/hulls/: barge.stl  barge_inland.stl  tanker_geometry_node.stl  tanker_kvlcc2_like.stl
examples/scripts/: blender_barge_geonodes.py  blender_nurbs_barge.py  blender_ship_gen.py  blender_ship_geonodes.py  blender_ship_subd.py  generate_hull.py  run_simulation.sh  run_simulation_docker.py
examples/vessels/: barge_nurbs.stl
jax_model/: pyproject.toml
openfoam/: README.md  pyproject.toml  run_analysis.py
openfoam/src/openfoam_runner/: tasks.py
report/: summary.md
report/floating_hull_full/: summary.md
report/floating_hull_still/: summary.md
report/matrix_dynamic_still/: summary.md
report/matrix_dynamic_waves/: summary.md
report/matrix_static_still/: summary.md
report/matrix_static_waves/: summary.md
report/still_water/: summary.md
scripts/: analyze_logs.py  check_hydrostatics.sh  configure_case.py  debug_mesh_inside.py  docker-entrypoint.sh  entrypoint_openfoam13.sh  extract_wave_height.py  inspect_stl.py  locate_instability.py  monitor_floating.py  monitor_tensorboard.py  resume_staged.sh  run_analysis.sh  run_docker.sh  run_matrix.sh  run_staged_container.sh  verify_case.sh  verify_hull.py  verify_hydrostatics.py  visualize_forces.py
scripts/analysis/: calculate_draft.py  verify_hydrostatics.py  visualize_baseline.py  visualize_flow.py
scripts/core/: configure_case.py  monitor_floating.py  verify_hull.py  verify_simulation_run.py
scripts/generators/: blender_operations.py
scripts/legacy/: load_openfoam.sh  reproduce_instability.sh  verify_case.sh  verify_openfoam.sh
scripts/utils/: check_hydrostatics.sh  dump_profile.py  generate_report.py  run_docker.sh  run_openfoam13.sh  run_openfoam_docker.sh  stop_simulation.sh  (+1 more)
templates/: README.md
tests/: test_physics.py  verify_blender_barge.py  verify_nurbs_barge.py
verification_run/: log.interFoam  log.snappyHexMesh
viz/: .gitignore  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+163 files in other folders)
