[project]
name = "ship-model"
version = "0.2.1"
description = "Ship model visualization and simulation tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "brax",
    "click",
    "dask",
    "distributed",
    "tqdm",
    "mako",
    "vtk>=9.5.2",
    "pyvista>=0.46.4",
]

[project.scripts]
openfoam-run = "openfoam_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jax_vessels", "src/openfoam_runner"]


