[project]
name = "ship-model"
version = "0.3.3"
description = "Ship model visualization and simulation tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "brax",
    "click",
    "dask",
    "distributed",
    "tqdm",
    "mako",
    "vtk>=9.5.2",
    "pyvista>=0.46.4",
    "pandas",
    "meshmagick @ git+https://github.com/LHEEA/meshmagick",
    "cmcrameri>=1.9",
]

[project.scripts]
openfoam-run = "openfoam_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jax_vessels", "src/openfoam_runner"]


