[project]
name = "ship-model"
dynamic = ["version"]
description = "Ship model visualization and simulation tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "brax",
    "click",
    "dask",
    "distributed",
    "tqdm",
    "mako",
    "vtk>=9.5.2",
    "pyvista>=0.46.4",
    "pandas",
    "meshmagick @ git+https://github.com/LHEEA/meshmagick",
    "cmcrameri>=1.9",
    "tensorboard>=2.20.0",
    "snakemake",
    "PyYAML",
    "trimesh>=4.10.1",
    "scipy>=1.15.3",
    "rerun-sdk>=0.28.1",
]

[project.scripts]
openfoam-run = "openfoam_runner.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jax_vessels", "src/openfoam_runner"]


