[project]
name = "openfoam-runner"
version = "0.1.0"
description = "OpenFOAM automation and parameter extraction"
dependencies = [
    "click",
    "dask",
    "distributed",
    "tqdm",
]

[project.scripts]
openfoam-run = "openfoam_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
